# Langzain

./: .gitignore  LICENSE  README.md  agent_core.py  app.py  pyproject.toml  requirements.txt  run_langzain_gui.py  ui_app.py
01_openai_functions/: functions.py
02_lcel_basic_chains/: chains.py
langzain/: LangzainGUI.py  agent_core.py  app.py  gui_app.py  run_langzain.py  run_langzain_ui.py  tools.py  ui_app.py
